@@ -1,3 +1,14 @@
+2008-01-28  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/component/encoders/wma/wma.xml:
+	* flumotion/component/encoders/wma/wma_wizard.py:
+	* flumotion/component/encoders/wmv/wmv-wizard.glade:
+	* flumotion/component/encoders/wmv/wmv.xml:
+	* flumotion/component/encoders/wmv/wmv_wizard.py:
+	* flumotion/component/muxers/asf/asf.xml:
+
+	Add initial wizard support, fixes #1571
+
 2007-11-20  Michael Smith <msmith@fluendo.com>
 
 	* flumotion/component/producers/wms/wms.xml:
